<resources>
    <string name="app_name">doseCerta</string>

    <!-- Tela de cadastro de usuário-->
    <string name="hint_nome">Seu Nome</string>
    <string name="hint_dtNascimento">Data de Nascimento</string>
    <string-array name="genero_options">
        <item>Selecione o gênero</item>
        <item>Prefiro não dizer</item>
        <item>Masculino</item>
        <item>Feminino</item>
        <item>Outro</item>
    </string-array>
    <string name="txt_criarConta">Criar uma Conta</string>
    <string name="btn_cadastrar">CADASTRAR</string>
    <string name="txt_possui_conta">Ja possui uma conta?</string>

    <!-- Tela de login -->
    <string name="btn_entrar">ENTRAR</string>
    <string name="txt_nao_possui_conta">Não possui uma conta?</string>
    <string name="btn_cadastre_se">Cadastre-se</string>
    <string name="checkBox_manter_conectado">Manter-se conectado</string>

    <!-- Tela de Perfil -->
    <string name="btn_sair_da_conta">Sair da conta</string>

    <!-- Tela de login e cadastro de usuário -->
    <string name="hint_email">Email</string>
    <string name="hint_senha">Senha</string>

    <!-- Tela home/tratamento-->
    <string name="txt_listMedicamentos">Aqui serão listados os medicamentos já cadastrado</string>
    <string name="btn_cadastrarMedicamento">Cadastrar Medicamento</string>
    <string name="editar">Editar\n</string>
    <string name="excluir">Excluir</string>

    <!-- Tela de cadastro de medicamentos-->
    <string name="hint_nomeMedicamento">Nome do Medicamento</string>
    <string name="hint_formato">Formato</string>
    <string name="hint_unidadeMedida">Unid. de Medida</string>
    <string name="hint_quantEstoque">Estoque</string>
    <string name="txt_cadastroMedicamento">Cadastre o seu medicamento</string>
    <string name="txt_estoqueMedicamento">Informe a quantidade em estoque. Opcional.</string>

    <!-- Tela de editar de tratamento-->
    <string name="txt_editarMedicamento">Editar tratamento\n</string>
    <string name="btn_salvar">Salvar</string>

    <!-- Tela de cadastro de alertas-->
    <string name="txt_cadastroAlerta">Cadastre o seu alerta</string>
    <string name="txt_frequencia">Frequência</string>
    <string name="txt_periodicidade">Relembre a cada</string>
    <string name="txt_duracaoTratamento">Por quantos dias?</string>
    <string name="txt_horarioPrimeiraDose">Horário da 1ª dose</string>
    <string name="txt_dose">Dose</string>
    <string name="hint_selecione">Selecione</string>
    <string name="txt_posologia">Posologia</string>
    <string name="txt_horario">Horário</string>

    <!-- Tela de edição de medicamento e alerta-->
    <string name="txt_edicaoCadastroMedicamento">Edite o tratamento</string>
    <string name="txt_edicaoCadastroAlerta">Edite o cadastro de alerta</string>

    <!-- Fragments -->
    <string name="menu_btn_bar_tratamento">Tratamento</string>
    <string name="menu_btn_bar_agenda">Agenda</string>
    <string name="menu_btn_bar_anotacao">Anotações</string>
    <string name="menu_btn_bar_perfil">Perfil</string>

    <!-- Utils -->
    <string name="btn_voltar">Voltar</string>
    <string name="btn_seguinte">Seguinte</string>
    <string name="btn_confirmar">Confirmar</string>
    <string name="helper_campoOpcional">* Opcional</string>



    <!--    Fragment Relatório-->
    <string name="txt_relatorio">Aqui será a tela de relatórios</string>

    <!--    Fragment Anotações-->
    <string name="txt_anotacoes">Aqui será a tela de anotações</string>

    <!--    Fragment Perfil-->
    <string name="txt_perfil">Aqui será a tela de perfil</string>
    <string name="txt_ola_fulano">Olá, Fulano</string>
    <string name="relatorio">Relatório</string>
    <string name="estoque_baixo">Aviso: Estoque baixo!</string>


</resources>
