<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

<LinearLayout
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    android:gravity="center"
    tools:context=".view.SignupActivity">

    <TextView
        android:id="@+id/txtTituloCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_criarConta"
        android:textSize="24sp"
        android:textColor="@color/dark_grey"
        android:textStyle="bold"
        style="@style/NoUnderlineEditText"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"/>

    <EditText
        android:id="@+id/editNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:hint="@string/hint_nome"
        android:maxLines="1"
        android:inputType="text"
        android:gravity="start"
        android:padding="14dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"/>

    <EditText
        android:id="@+id/datePickerNascimento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:hint="@string/hint_dtNascimento"
        android:maxLines="1"
        android:inputType="date"
        android:focusable="false"
        android:clickable="true"
        android:gravity="start"
        android:padding="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"/>

    <EditText
        android:id="@+id/editGenero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:hint="@string/hint_genero"
        android:maxLines="1"
        android:inputType="text"
        android:gravity="start"
        android:padding="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"/>

    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:drawableEnd="@drawable/ic_email"
        android:hint="@string/hint_email"
        android:maxLines="1"
        android:inputType="textEmailAddress"
        android:gravity="start"
        android:padding="14dp"
        android:layout_marginTop="30dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"/>

    <EditText
        android:id="@+id/editSenha"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_grey"
        android:drawableEnd="@drawable/ic_padlock"
        android:hint="@string/hint_senha"
        android:maxLines="1"
        android:inputType="numberPassword"
        android:gravity="start"
        android:padding="14dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="65dp"
        android:layout_marginEnd="65dp"/>

    <Button
        android:id="@+id/btnCadastrar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/blue"
        app:cornerRadius="14dp"
        android:text="@string/btn_cadastrar"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120sp"
        android:layout_marginBottom="20sp"/>

    <View
        android:layout_width="200dp"
        android:layout_height="1dp"
        android:background="@color/dark_grey"
        android:layout_marginTop="10dp"/>

    <TextView
        android:id="@+id/txtLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_possui_conta"
        android:textSize="20sp"
        android:textColor="@color/dark_grey"
        android:gravity="center"
        style="@style/NoUnderlineEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnTelaLogin"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20sp"
        android:layout_marginEnd="20sp"/>

    <Button
        android:id="@+id/btnTelaLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/dark_grey"
        app:cornerRadius="14dp"
        android:text="@string/btn_entrar"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_marginTop="15dp"
        android:layout_marginStart="145dp"
        android:layout_marginEnd="145sp"
        android:layout_marginBottom="20sp"/>
</LinearLayout>
</ScrollView>