<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        tools:context=".view.CadastroMedicamentoActivity">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_voltar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/light_grey"
            app:cornerRadius="14dp"
            android:drawableLeft="@drawable/ic_voltar"
            android:text="@string/btn_voltar"
            android:textColor="@color/blue"
            android:layout_marginTop="50dp"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="230dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="20dp"
            android:text="@string/txt_cadastroAlerta"
            android:textColor="@color/dark_grey"
            android:textSize="18sp"
            android:textStyle="bold"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="20dp"
            app:cardElevation="4dp"
            android:backgroundTint="@color/white"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_frequencia"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/dark_grey"
                    android:layout_marginStart="5dp"
                    android:layout_marginBottom="10dp"/>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_horarioPrimeiraDose"
                        android:layout_weight="1"
                        android:textSize="16sp"
                        android:textColor="@color/dark_grey"/>

                    <TextView
                        android:id="@+id/horarioPrimeiraDoseValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="00:00 hora(s)"
                        android:textSize="16sp"
                        android:textColor="@color/blue"
                        android:layout_marginStart="8dp"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:drawableEnd="@drawable/ic_arrow_drop_down"
                        android:background="?attr/selectableItemBackground"
                        android:padding="8dp"
                        android:clickable="true"
                        android:focusable="true"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_periodicidade"
                        android:textSize="16sp"
                        android:layout_weight="1"
                        android:textColor="@color/dark_grey"/>

                    <TextView
                        android:id="@+id/periodicidadeValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:layout_marginStart="8dp"
                        android:background="?attr/selectableItemBackground"
                        android:clickable="true"
                        android:focusable="true"
                        android:padding="8dp"
                        android:text="0 hora(s)"
                        android:gravity="right"
                        android:textColor="@color/blue"
                        android:drawableEnd="@drawable/ic_arrow_drop_down"
                        android:textSize="16sp"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_duracaoTratamento"
                        android:textSize="16sp"
                        android:textColor="@color/dark_grey" />

                    <TextView
                        android:id="@+id/duracaoTratamentoValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="0 dia(s)"
                        android:textSize="16sp"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:textColor="@color/blue"
                        android:layout_marginStart="8dp"
                        android:background="?attr/selectableItemBackground"
                        android:drawableEnd="@drawable/ic_arrow_drop_down"
                        android:padding="8dp"
                        android:clickable="true"
                        android:focusable="true"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center_vertical"
                    android:layout_weight="1"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_dose"
                        android:textSize="16sp"
                        android:textColor="@color/dark_grey"/>

                    <TextView
                        android:id="@+id/doseValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="formato"
                        android:textSize="16sp"
                        android:layout_weight="2"
                        android:gravity="right"
                        android:textColor="@color/blue"
                        android:layout_marginStart="8dp"
                        android:background="?attr/selectableItemBackground"
                        android:padding="8dp"
                        android:clickable="true"
                        android:focusable="true"
                        app:drawableEndCompat="@drawable/ic_arrow_drop_down" />
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_seguinte"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/blue"
            app:cornerRadius="14dp"
            android:text="@string/btn_seguinte"
            android:textColor="@color/white"
            android:textAlignment="textStart"
            android:layout_marginTop="20dp"
            android:layout_marginStart="255dp"
            android:layout_marginEnd="32dp"/>
    </LinearLayout>
</ScrollView>